Add form to index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
    
    <body>
       This is just a GroupMe bot. Nothing to see here.
+      <form action="" method="post">
+      	<label for="message">Message:</label>
+      	<input type="text" id="message" name="message" placeholder="Message"/>
+      	<input type="submit" value="Send"/>
+      </form>
    </body>
 </html>
