Minor changes to form structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
    </head>
    
    <body>
-      This is just a GroupMe bot. Nothing to see here.
-      <form action="" method="post">
-      	<label for="message">Message:</label>
-      	<input type="text" id="message" name="message" placeholder="Message"/>
-      	<input type="submit" value="Send"/>
-      </form>
+      <h1>GroupMeme Bot</h1>
+      <p>This is just a GroupMe bot. Nothing to see here.</p>
+      <div>
+         <form action="/send" method="post">
+            <label for="message">Message:</label>
+            <input type="text" id="message" name="message" placeholder="Message"/>
+            <input type="submit" value="Send"/>
+         </form>
+      </div>
    </body>
 </html>
