--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
          <form action="/send" method="post">
             <label for="message">Message:</label>
             <input type="text" id="message" name="message" placeholder="Message"/>
+            <br>
+            <label for="imageUrl">Image URL:</label>
+            <input type="text" id="imageUrl" name="imageUrl" placeholder="https://imgs.xkcd.com/comics/exploits_of_a_mom.png"/>
+            <br>
             <input type="submit" value="Send"/>
          </form>
       </div>
